# web-bugs-analysis

./: .gitignore  README.md  docker-compose.yml
_docs/: architecture.md  available-data.md  backups.md  components.md  data-flow.md  deployment.md  queue-cli.md
_docs/additional-files/: data-flow.monopic  external-nginx.conf
config/: environment.example  htpasswd-data.example  kibana.example
data/current/: index.html
helpers/: README.md
helpers/remove-private-data/: Cargo.toml  README.md
helpers/remove-private-data/src/: main.rs
src/downloader/: Dockerfile  main.ts  package-lock.json  package.json  tsconfig.json
src/indexer/: main.ts  package-lock.json  package.json
src/queue-cli/: Dockerfile  main.ts  package-lock.json  package.json
src/reverse-proxy/: Dockerfile
src/reverse-proxy/configs/: nginx.conf  proxy-configs.conf
src/scripts/: make-snapshot  remove-old-snapshots
src/webhook-receiver/: Dockerfile  main.ts  package-lock.json  package.json  tsconfig.json
